--- a/.gitattributes
+++ b/.gitattributes
@@ -78,3 +78,6 @@ spring-boot-中文参考手册.pdf filter=lfs diff=lfs merge=lfs -text
 从PAXOS到ZOOKEEPER分布式一致性原理与实践.pdf filter=lfs diff=lfs merge=lfs -text
 Java程序设计语言-第4版.pdf filter=lfs diff=lfs merge=lfs -text
 Quartz_Job+Scheduling_Framework_中文版_V1.0.0.pdf filter=lfs diff=lfs merge=lfs -text
+C[[:space:]]专家编程.pdf filter=lfs diff=lfs merge=lfs -text
+C和指针.pdf filter=lfs diff=lfs merge=lfs -text
+C陷阱与缺陷(中文版清晰版).pdf filter=lfs diff=lfs merge=lfs -text
