--- a/vscode/.vscode/launch.json
+++ b/vscode/.vscode/launch.json
@@ -12,7 +12,7 @@
   "environment": [],
   "externalConsole": true,
   "MIMode": "gdb",
-  "miDebuggerPath": "XXX/bin/gdb.exe",
+  "miDebuggerPath": "C:\\TDM-GCC-64\\gdb64\\bin\\gdb.exe",
   "setupCommands": [
   {
       "description": "Enable pretty-printing for gdb",
@@ -33,7 +33,7 @@
   "environment": [],
   "externalConsole": true,
   "MIMode": "gdb",
-  "miDebuggerPath": "C:/TDM-GCC-64/gdb64/bin/gdb.exe",
+  "miDebuggerPath": "C:\\TDM-GCC-64\\gdb64\\bin\\gdb.exe",
   "setupCommands": [
   {
       "description": "Enable pretty-printing for gdb",
